--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -22,7 +22,7 @@
               [% PERL %]
                                         print C4::AR::Filtros::action_button(   
                                                                     
-                                                                            button   => "btn btn-primary",
+                                                                            button   => "btn btn-success",
                                                                             action   => 'agregarEstante();',
                                                                             title    => "[% 'Agregar Estante' | i18n %]",
                                                                       
@@ -51,7 +51,7 @@
                                           
               [% PERL %]
                                         print C4::AR::Filtros::action_button(  
-                                                                            button   => "btn btn-primary",
+                                                                            button   => "btn btn-success",
                                                                             action => 'agregarSubEstante();',
                                                                             title   => "[% 'Agregar Subestante' | i18n %]",
                                                                           
