--- a/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
@@ -26,7 +26,7 @@
 
                                                 [% PERL %]
                                                                     print C4::AR::Filtros::action_button(
-                                                                                                        button   => "btn btn-primary",
+                                                                                                        button   => "btn btn-success",
                                                                                                         title   => "[% 'Agregar estante' | i18n %]",
                                                                                                         action => "agregarNuevoEstante();",
                                                                             ) ;
