--- a/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
@@ -39,7 +39,7 @@
  
 
       <div class="modal-header">
-            <a class="close" data-dismiss="modal" href="#">×</a>
+            <a class="close" data-dismiss="modal" href="#">Ã—</a>
             <h3> [% "Buscar Contenido" | i18n %]</h3>
       </div>
       <div class="modal-body">
@@ -133,7 +133,7 @@
                                           
               [% PERL %]
                                         print C4::AR::Filtros::action_button(  
-                                                                            button   => "btn btn-primary",
+                                                                            button   => "btn btn-success",
                                                                             action => 'agregarSubEstante();',
                                                                             title   => "[% 'Agregar Subestante' | i18n %]",
                                                                           
