--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
@@ -63,7 +63,7 @@
 <section class="center-section-form">
 	<form class="form-horizontal" onsubmit="return false;">
 		<fieldset>
-		    <legend>[% 'Configuraci&oacute;n de formatos de &oacute;digos de inventario' | i18n %]</legend>
+		    <legend>[% 'Configuraci&oacute;n de formatos de c&oacute;digos de inventario' | i18n %]</legend>
 			    <div class="control-group">
                     <label class="control-label" for="tipo_nivel3_id">[% 'Tipo de documento' | i18n %]</label>		
                     <div class="controls">	       
