--- a/intranet/htdocs/intranet-tmpl/catalogacion/tipoDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tipoDocumento.tmpl
@@ -41,6 +41,23 @@
         $('#accionesTipoDocumento').modal();
     }
 
+    function eliminarTipoDocumento(idTipoDoc){
+        objAH               = new AjaxHelper(updateEliminarTipoDocumento);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;
+        objAH.idTipoDoc     = idTipoDoc;
+        objAH.url           = URL_PREFIX+"/catalogacion/tipoDocumentoDB.pl";
+        objAH.tipoAccion    = 'DEL_TIPO_DOC';
+  
+        objAH.sendToServer();
+    }
+
+    function updateEliminarTipoDocumento(responseText){
+        var Messages = JSONstring.toObject(responseText);
+        setMessages(Messages);
+        mostrarTabla();
+    }
+
     function guardarModificacion(){
 
         $('#modTipoDocumento').submit();
