--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
@@ -36,8 +36,8 @@ function eleccionSubCampo(){
                                                  button   => "btn btn-warning",
                                                  url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
                                                  params =>   ["id_importacion=[% importacion.getId %]"],
-                                                 icon => "icon-search",
-                                                 title   => "[% 'Detalle Importaci&oacute;n' | i18n %]",
+                                                 icon => "icon-white icon-search",
+                                                 title   => " [% 'Detalle Importaci&oacute;n' | i18n %]",
                      ) ;
          [% END %]
 
