--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+  <script type="text/javascript">
 
     $(document).ready(function() {
           onEnter('search_importacion',detalleImportacion,'[% id_importacion %]');
@@ -21,8 +21,8 @@ function cambiarFiltro (filtro){
                                                                  button   => "btn btn-warning",
                                                                  url=>"[% url_prefix %]/herramientas/importacion/configurar_importacion.pl",
                                                                  params =>   ["id_importacion=[% id_importacion %]"],
-                                                                 icon => "icon-cog",
-                                                                 title   => "[% 'Configurar Importaci&oacute;n' | i18n %]",
+                                                                 icon => "icon-white icon-cog",
+                                                                 title   => " [% 'Configurar Importaci&oacute;n' | i18n %]",
                                      ) ;
          [% END %]
 
@@ -59,154 +59,160 @@ function cambiarFiltro (filtro){
 			</div>
         </div>
 
-		<div class="well form-search">
-		        <input type="text" class="input-medium search-query" id="search_importacion">
-		        <button type="submit" class="btn" onclick="detalleImportacion([% id_importacion %]);">[% "Buscar" | i18n %]</button>
-		</div>        
-		
-        <div class="contenedor_paginador">[% paginador %]</div>
-        <div class="datos_tabla_div_importacion">
-            <div class="well">
-                <div class="resultados_consulta">[% "La cantidad de registros es" | i18n %]: [% cantidad %]</div>
-            </div>
+       [% IF resultsloop %]
+
+    		<div class="well form-search">
+    		        <input type="text" class="input-medium search-query" id="search_importacion">
+    		        <button type="submit" class="btn" onclick="detalleImportacion([% id_importacion %]);">[% "Buscar" | i18n %]</button>
+    		</div>        
+    		
+            <div class="contenedor_paginador">[% paginador %]</div>
+            <div class="datos_tabla_div_importacion">
+                <div class="well">
+                    <div class="resultados_consulta">[% "La cantidad de registros es" | i18n %]: [% cantidad %]</div>
+                </div>
             
-            [% PERL %]
-                print C4::AR::Filtros::tableHeader(   
-                                  id              => "tablaResult",
-                                  columns         => ['[% "T&iacute;itulo"|i18n %]',
-													  '[% "Autor"|i18n %]',
-													  '[% "Identificaci&oacute;n"|i18n %]',
-													  '[% "Tipo"|i18n %]',
-													  '[% "Encontrado"|i18n %]',
-													  '[% "Estado"|i18n %]',
-													  '[% "Acciones"|i18n %]',
-                                                     ]
-                                        );
-            [% END %]
+                [% PERL %]
+                    print C4::AR::Filtros::tableHeader(   
+                                      id              => "tablaResult",
+                                      columns         => ['[% "T&iacute;itulo"|i18n %]',
+    													  '[% "Autor"|i18n %]',
+    													  '[% "Identificaci&oacute;n"|i18n %]',
+    													  '[% "Tipo"|i18n %]',
+    													  '[% "Encontrado"|i18n %]',
+    													  '[% "Estado"|i18n %]',
+    													  '[% "Acciones"|i18n %]',
+                                                         ]
+                                            );
+                [% END %]
+                  <tbody>
 
-            <tbody>
+                  [% FOREACH detalle_importacion IN resultsloop %]
+                      <tr>
+                            <td>
+                                  [% FOREACH titulo IN detalle_importacion.getTitulo %]
+                                    [% titulo %]<br>
+                                  [% END %]
+                            </td>
+                            <td>
+                                  [% FOREACH autor IN detalle_importacion.getAutor %]
+                                    [% autor %]<br>
+                                  [% END %]
+                            </td>
+                            <td>
+                                 [% detalle_importacion.getIdentificacion %]
+                            </td>
+                            <td>
+                                 [% detalle_importacion.getTipo %]
+                                [% IF detalle_importacion.getTipo == "Registro" %] ([% detalle_importacion.getCantidadDeRegistrosHijo %] registros)[% END %]
+                            </td>
 
-            [% FOREACH detalle_importacion IN resultsloop %]
-                <tr>
-                      <td>
-                            [% FOREACH titulo IN detalle_importacion.getTitulo %]
-                              [% titulo %]<br>
-                            [% END %]
-                      </td>
-                      <td>
-                            [% FOREACH autor IN detalle_importacion.getAutor %]
-                              [% autor %]<br>
-                            [% END %]
-                      </td>
-                      <td>
-                           [% detalle_importacion.getIdentificacion %]
-                      </td>
-                      <td>
-                           [% detalle_importacion.getTipo %]
-                          [% IF detalle_importacion.getTipo == "Registro" %] ([% detalle_importacion.getCantidadDeRegistrosHijo %] registros)[% END %]
-                      </td>
+                            <td>
+                              [% IF detalle_importacion.getMatching %]
+                              <span class="label label-success">
+      							Si
+      						</span>
+                              [% ELSE %]
+                              <span class="label label-info">No</span>
+                              [% END %]
+                            </td>
+                            
+                            <td>
+                              [% IF detalle_importacion.getEstado == "IGNORADO" %]
+                                  <span class="label label-warning" 
+                                        rel="popover" 
+                                        data-content="[% detalle_importacion.getDetalle %]" 
+                                        data-original-title="[% 'Ignorado' | i18n %]" >
+                                  [% 'Ignorado' | i18n %]</span>
+                              [% ELSIF detalle_importacion.getEstado == "IMPORTADO" %]
+                                  <span class="label label-success"
+                                        rel="popover" 
+                                        data-content="[% detalle_importacion.getDetalle %]" 
+                                        data-original-title="[% 'Importado' | i18n %]" >
+                                  [% 'Importado' | i18n %]</span>
+                              [% ELSIF detalle_importacion.getEstado == "ERROR" %]
+                                  <span class="label label-warning popover_button" 
+                                        rel="popover" 
+                                        data-content="[% detalle_importacion.getDetalle %]" 
+                                        data-original-title="[% 'Error' | i18n %]" >
+                                  [% 'Error' | i18n %]
+                                  </span>
+                              [% ELSE %]
+      						    <span class="label label-info">[% 'Procesar' | i18n %]</span>
+                              [% END %]
+                              
+                            </td>
 
-                      <td>
-                        [% IF detalle_importacion.getMatching %]
-                        <span class="label label-success">
-							Si
-						</span>
-                        [% ELSE %]
-                        <span class="label label-info">No</span>
-                        [% END %]
-                      </td>
-                      
-                      <td>
-                        [% IF detalle_importacion.getEstado == "IGNORADO" %]
-                            <span class="label label-warning" 
-                                  rel="popover" 
-                                  data-content="[% detalle_importacion.getDetalle %]" 
-                                  data-original-title="[% 'Ignorado' | i18n %]" >
-                            [% 'Ignorado' | i18n %]</span>
-                        [% ELSIF detalle_importacion.getEstado == "IMPORTADO" %]
-                            <span class="label label-success"
-                                  rel="popover" 
-                                  data-content="[% detalle_importacion.getDetalle %]" 
-                                  data-original-title="[% 'Importado' | i18n %]" >
-                            [% 'Importado' | i18n %]</span>
-                        [% ELSIF detalle_importacion.getEstado == "ERROR" %]
-                            <span class="label label-warning popover_button" 
-                                  rel="popover" 
-                                  data-content="[% detalle_importacion.getDetalle %]" 
-                                  data-original-title="[% 'Error' | i18n %]" >
-                            [% 'Error' | i18n %]
-                            </span>
-                        [% ELSE %]
-						    <span class="label label-info">[% 'Procesar' | i18n %]</span>
-                        [% END %]
-                        
-                      </td>
-
-                      <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
-                      <td style="width: 100px;">
-							   [% IF detalle_importacion.getEstado != "IGNORADO" %]
-							   	   [% IF detalle_importacion.getMatching %]
-	                                 [% PERL %]
-									   print C4::AR::Filtros::action_set_button(    
-											title           => "[% 'Registro' | i18n %]",
-											button          => 'btn btn-primary',
-											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-											actions         => [
-												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
-												{title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","IGNORADO")', icon=>"icon-ban-circle"},
-												{title => "Ver Registro",  url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl",  params =>   ["id1=[% detalle_importacion.getIdMatching %]"], icon=>"icon-search"},
-												{title => "No es el mismo Registro",  action=>'quitarMatcheoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]");', icon=>"icon-minus-sign"},
-															   ],
-										);
-									  [% END %]
-	                              [% ELSE %]
-									  [% PERL %]
-									   print C4::AR::Filtros::action_set_button(    
-											title           => "[% 'Registro' | i18n %]",
-											button          => 'btn btn-primary',
-											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-											actions         => [
-												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]")',icon=>"icon-search"},
-												{title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","IGNORADO")', icon=>"icon-ban-circle"},
-															   ],
-										);
-									  [% END %]
-	                              [% END %]
-	                           [% ELSE %]
-	                             [% IF detalle_importacion.getMatching %]
-	                                 [% PERL %]
-									   print C4::AR::Filtros::action_set_button(    
-											title           => "[% 'Registro' | i18n %]",
-											button          => 'btn btn-primary',
-											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-											actions         => [
-												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
-												{title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","PROCESAR");', icon=>"icon-ok-circle"},
-												{title => "Ver Registro",  url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl",  params =>   ["id1=[% detalle_importacion.getIdMatching %]"], icon=>"icon-search"},
-												{title => "No es el mismo Registro",  action=>'quitarMatcheoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]");', icon=>"icon-minus-sign"},
-															   ],
-										);
-									  [% END %]
-	                              [% ELSE %]
-									  [% PERL %]
-									   print C4::AR::Filtros::action_set_button(    
-											title           => "[% 'Registro' | i18n %]",
-											button          => 'btn btn-primary',
-											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-											actions         => [
-												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
-												{title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","PROCESAR");', icon=>"icon-ok-circle"},
-															   ],
-										);
-									  [% END %]
-								 [% END %]
-							   [% END %]
-                      </td>
-                </tr>
-            [% END %]
-            </tbody>
-            </table>
-        </div>
+                            <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
+                            <td style="width: 100px;">
+      							   [% IF detalle_importacion.getEstado != "IGNORADO" %]
+      							   	   [% IF detalle_importacion.getMatching %]
+      	                                 [% PERL %]
+      									   print C4::AR::Filtros::action_set_button(    
+      											title           => "[% 'Registro' | i18n %]",
+      											button          => 'btn btn-primary',
+      											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+      											actions         => [
+      												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
+      												{title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","IGNORADO")', icon=>"icon-ban-circle"},
+      												{title => "Ver Registro",  url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl",  params =>   ["id1=[% detalle_importacion.getIdMatching %]"], icon=>"icon-search"},
+      												{title => "No es el mismo Registro",  action=>'quitarMatcheoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]");', icon=>"icon-minus-sign"},
+      															   ],
+      										);
+      									  [% END %]
+      	                              [% ELSE %]
+      									  [% PERL %]
+      									   print C4::AR::Filtros::action_set_button(    
+      											title           => "[% 'Registro' | i18n %]",
+      											button          => 'btn btn-primary',
+      											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+      											actions         => [
+      												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]")',icon=>"icon-search"},
+      												{title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","IGNORADO")', icon=>"icon-ban-circle"},
+      															   ],
+      										);
+      									  [% END %]
+      	                              [% END %]
+      	                           [% ELSE %]
+      	                             [% IF detalle_importacion.getMatching %]
+      	                                 [% PERL %]
+      									   print C4::AR::Filtros::action_set_button(    
+      											title           => "[% 'Registro' | i18n %]",
+      											button          => 'btn btn-primary',
+      											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+      											actions         => [
+      												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
+      												{title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","PROCESAR");', icon=>"icon-ok-circle"},
+      												{title => "Ver Registro",  url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl",  params =>   ["id1=[% detalle_importacion.getIdMatching %]"], icon=>"icon-search"},
+      												{title => "No es el mismo Registro",  action=>'quitarMatcheoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]");', icon=>"icon-minus-sign"},
+      															   ],
+      										);
+      									  [% END %]
+      	                              [% ELSE %]
+      									  [% PERL %]
+      									   print C4::AR::Filtros::action_set_button(    
+      											title           => "[% 'Registro' | i18n %]",
+      											button          => 'btn btn-primary',
+      											action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+      											actions         => [
+      												{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
+      												{title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","PROCESAR");', icon=>"icon-ok-circle"},
+      															   ],
+      										);
+      									  [% END %]
+      								 [% END %]
+      							   [% END %]
+                            </td>
+                      </tr>
+                  [% END %]
+                  </tbody>
+                </table>
+            </div>
+          [% ELSE %]
+            <div class="alert alert-info fade in">
+               <strong>[% 'No hay registros identificados' | i18n %]</strong>
+            </div>           
+          [% END %]
 
 
 <div id="detalleRegistroMARC"></div>
