--- a/intranet/htdocs/intranet-tmpl/catalogacion/tipoDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tipoDocumento.tmpl
@@ -1,70 +1,7 @@
 [% INCLUDE 'intranet-top.inc' %]
 [% USE HTML %]
 
-<!-- <script type="text/javascript" src="/intranet-tmpl/includes/ayudaMarc.js"></script> -->
-
-<script type"text/javascript">
-
-    $(document).ready(function() {
-        mostrarTabla();
-    });
-
-    function mostrarTabla(){
-        objAH               = new AjaxHelper(updateMostrarTabla);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/tipoDocumentoDB.pl";
-        objAH.tipoAccion    = 'LISTAR';
-
-        objAH.sendToServer();
-    }
-
-    function updateMostrarTabla(responseText){
-        $("#resultTipoDocumento").html(responseText);
-    }
-
-    function modificarTipoDocumento(idTipoDoc){
-
-        objAH               = new AjaxHelper(updateModificarTipoDocumento);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;
-        objAH.idTipoDoc     = idTipoDoc;
-        objAH.url           = URL_PREFIX+"/catalogacion/tipoDocumentoDB.pl";
-        objAH.tipoAccion    = 'SHOW_MOD_TIPO_DOC';
-  
-        objAH.sendToServer();
-
-    }
-
-    function updateModificarTipoDocumento(responseText){
-        $('#accionesTipoDocumento').html(responseText);
-        $('#accionesTipoDocumento').modal();
-    }
-
-    function eliminarTipoDocumento(idTipoDoc){
-        objAH               = new AjaxHelper(updateEliminarTipoDocumento);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;
-        objAH.idTipoDoc     = idTipoDoc;
-        objAH.url           = URL_PREFIX+"/catalogacion/tipoDocumentoDB.pl";
-        objAH.tipoAccion    = 'DEL_TIPO_DOC';
-  
-        objAH.sendToServer();
-    }
-
-    function updateEliminarTipoDocumento(responseText){
-        var Messages = JSONstring.toObject(responseText);
-        setMessages(Messages);
-        mostrarTabla();
-    }
-
-    function guardarModificacion(){
-
-        $('#modTipoDocumento').submit();
-    }
-
-
-</script>
+<script type="text/javascript" src="/intranet-tmpl/includes/tipoDocumento.js"></script>
 
 <div id="resultTipoDocumento"> </div>
 <div id="accionesTipoDocumento" class="modal hide fade"> </div>
