fix visual en OPAC - Detalle - Revisiones de la edicion

--- a/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
@@ -9,7 +9,7 @@
                                                url          => "[% url_prefix %]/admin/catalogo/revisiones_pendientes.pl",
                                                params       => ["token=[% token %]",],
                                                icon         => "icon-white icon-eye-open",
-                                               title        => "Moderar",
+                                               title        => " [% 'Moderar' | i18n %]",
                                            ) ;
         
        [% END %]
