[CHANGELOG] Ahora Generar carnets de usuarios esta en Usuarios/Reportes

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/users-cardsResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/users-cardsResult.tmpl
@@ -1,19 +1,16 @@
 <script type="text/javascript">
       $(document).ready(function() {
-        makeToggle('datos_tabla_div','trigger',null,false);
-//         registrarTooltips();
       });
 </script>
 <fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
+    <legend >[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
       [% IF cantidad %]
+            <br />
             <div class="well">
               <div class="resultados_consulta">[% "T&eacute;rmino de b&uacute;squeda" | i18n %]: [% buscoPor %]</div>
               <div class="resultados_consulta">[% "Total de registros" | i18n %]: [% cantidad %] </div>
             </div>
 
-
-             
               <div class="contenedor_paginador">[% paginador %]</div>
               <form method="post" id="form_cards_gen" onsubmit="[% url_prefix %]/usuarios/reales/users-cards.pl">
 
@@ -22,10 +19,9 @@
                           id              => "datos_tabla",
                           class           => "",
                           selectAll_id    => "",
-                          columns         => [  '[% "Apellido"|i18n %]','[% "Nombre"|i18n %]',
-                                                '[% "Direcci&oacute;n"|i18n %]','[% "Tarjeta de Id"|i18n %]',
-                                                '[% "Legajo"|i18n %]','[% "Telefono"|i18n %]',
-                                                '[% "E-mail"|i18n %]','[% "Ingreso"|i18n %]',
+                          columns         => [  '[% "Apellido y Nombre"|i18n %]',
+                                                '[% "Tarjeta de Id"|i18n %]',
+                                                '[% "Legajo"|i18n %]','[% "Ingreso"|i18n %]',
                                                 '[% "Categoria"|i18n %]','[% "Regularidad"|i18n %]',  
                                               ]
                         
@@ -46,22 +42,28 @@
                       
                         </td>
                         
-                        <td> [% socio.persona.getNombre %] </td>
-                        <td> [% socio.persona.getDireccion %]</td>
                         <td> [% socio.getNro_socio %]</td>
                         <td> [% socio.persona.legajo %]</td>
-                        <td> [% socio.persona.ciudad.getNombre %] </td>
-                        <td> [% socio.persona.getTelefono %] </td>
-                        <td> 
-                            [% IF ok %] 
-                                [% socio.persona.getEmail %]
-                            [% ELSE %]
-                                <a href="mailto:[% socio.persona.getEmail %]">[% socio.persona.getEmail %] </a>
-                            [% END %]
+                        <td> [% TRY %] 
+                                [% IF socio.getFecha_alta %] 
+                                    [% socio.getFecha_alta %] 
+                                [% ELSE %]
+                                    --------
+                                [% END %]
+                             [% CATCH %] 
+                                -------- 
+                             [% END %]
                         </td>
-                        <td> [% socio.persona.getNacimiento %]</td>
-                        <td> [% socio.persona.categoria.getDescription %]</td>
-                        <td><b>[% socio.estado.getRegular %]</b></td>
+                        <td>
+                            [% TRY %]
+                              [% socio.categoria.getDescription %]
+                            [% CATCH %]
+                              [% 'Sin categor&iacute;a' | i18n %]
+                            [% END %] 
+                        </td>
+                        <td>
+                            <span class="label [% IF socio.esRegular %]label-success[% ELSE %]label-important[% END %]">[% socio.esRegularToString %]</span>
+                        </td> 
                         <input type="hidden" name="[% socio.getNro_socio %]" value="[% socio.getNro_socio %]">
                     </tr>
                 [% END %]
@@ -73,13 +75,13 @@
       </form>
 </fieldset>
 
-<div class="buttonContainerHorizontal">
+<div class="form-actions">
    
     <script> var search2 = 'pdf'; </script>
     [% PERL %]
             print C4::AR::Filtros::action_button( 
-                                                text    =>  "[% 'Carnets' | i18n %]",
-                                                title    =>  "[% 'Carnets' | i18n %]",
+                                                text    =>  "[% 'Generar carnets' | i18n %]",
+                                                title    =>  "[% 'Generar carnets' | i18n %]",
                                                 button   =>  "btn click btn-primary",
                                                 action =>  "consultar(search2);",
                                             );
