--- a/intranet/htdocs/intranet-tmpl/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/mensajes_contacto.tmpl
@@ -2,19 +2,16 @@
 [% IF cant_noleidos %]
     <fieldset>
         <legend>[% "Mensajes de Contacto :" | i18n %]</legend>    
-         <dl>
+        <br />
              [% FOREACH mens IN ultimos_no_leidos %]
-                 <dt>
-                       [% HTML.escape(mens.getNombre) %] [% HTML.escape(mens.getApellido) %]
-                        <a href="mailto:[% HTML.escape(mens.getEmail) %]">([% HTML.escape(mens.getEmail) %])</a>
-                        <dd>
-                               <a href="#" onclick="showDirectMessage([% mens.id%])">
-                                    [% HTML.escape(mens.getAsunto) %]
-                               </a>
-                        </dd>
-                 </dt>
+                <blockquote>
+                  <p><a href="#" onclick="showDirectMessage([% mens.id%])">[% HTML.escape(mens.getAsunto) %]</a></p>
+                  <small>[% HTML.escape(mens.getNombre) %] [% HTML.escape(mens.getApellido) %]
+                      <cite title=""><a href="mailto:[% HTML.escape(mens.getEmail) %]">([% HTML.escape(mens.getEmail) %])</a></cite>
+                  </small>
+                </blockquote>
              [% END %]
-         </dl>
+
            [% PERL %]
 	           print C4::AR::Filtros::action_link_button( 
 	                 text =>     " [% 'Ver Mensajes' | i18n %]",
