--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -23,8 +23,7 @@
 		           <label class="control-label" for="email">[% "E-mail" | i18n %]</label>
 		           <div class="controls">
 			            <div class="input-prepend">
-			              <span class="add-on"><i class="icon-envelope"></i></span>
-			              <input class="span3" type="email" name="email" id="email" value="[% socio_data.usr_email %]">
+			              <span class="add-on"><i class="icon-envelope"></i></span><input class="span3" type="email" name="email" id="email" value="[% socio_data.usr_email %]">
 			            </div>		               
 		           </div>
 	               <input type="hidden" name="token" value="[% token %]" />
