--- a/opac/htdocs/opac-tmpl/settings.tmpl
+++ b/opac/htdocs/opac-tmpl/settings.tmpl
@@ -28,12 +28,14 @@
                       [% END %]                  
 	              </div>
 	           </div>
+
+	           
+
 	           <div class="control-group">
 		           <label class="control-label" for="email">[% "E-mail" | i18n %]</label>
 		           <div class="controls">
 			            <div class="input-prepend">
-			              <span class="add-on"><i class="icon-envelope"></i></span>
-			              <input class="span3" type="email" name="email" id="email" value="[% socio_data.usr_email %]">
+			              <span class="add-on"><i class="icon-envelope"></i></span><input class="span3" type="email" name="email" id="email" value="[% socio_data.usr_email %]">
 			            </div>		               
 		           </div>
 	               <input type="hidden" name="token" value="[% token %]" />
