--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -82,7 +82,7 @@ var jobID = 0;
   	        
   	    </div>
   	    [% IF twitter_username_to_search %]
-<!--         
+<!--         FIXME
   		   <div id="tweets" class="tweets">
   		       <div class="loading">[% 'Cargando tweets...' | i18n %]</div>
   	       </div>
