abm portadas edicionç

--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -619,3 +619,8 @@ body {
 }
 
 legend div.group_separator {background-color:#dff0d8;border-color:#d6e9c6;color:#468847;padding-left: 10px;}
+
+.portadaEdicionImage img{
+    max-height: 180px;
+    max-width:110px;
+}
