--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -914,3 +914,4 @@ body{padding-bottom:60px;}
 ._span96{width:96%;}
 .listado_sin_margen{list-style-type:none;}
 legend div.group_separator{background-color:#dff0d8;border-color:#d6e9c6;color:#468847;padding-left:10px;}
+.portadaEdicionImage img{max-height:180px;max-width:110px;}
