--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_reglas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_reglas.tmpl
@@ -1,17 +1,53 @@
 <fieldset>
-    <legend class="titulo_legend">[% "Tipos Sanciones" | i18n %] </legend>
-    <table class="table table-striped">
-      <thead>    
-        <tr class="titulo_tabla_resultado">
+    <legend class="titulo_legend">[% "Esquema de sanciones" | i18n %] 
+      
+                  <div class="alert alert-info">
+                      <h4>[% tipo_sancion.ref_tipo_prestamo.descripcion %]</h4>
+                      <h6>[% tipo_sancion.ref_categoria_socio.getDescription %]</h6>
 
-            <th>[% "Orden" | i18n %]</th>
-            <th>[% "D&iacute;as de demora" | i18n %]</th>
-            <th>[% "D&iacute;as de sanci&oacute;n" | i18n %]</th>
-            <th>[% "Cantidad" | i18n %]</th>
-            <th> [% "Eliminar" | i18n %]</th>
+                      [% IF tipos_prestamo_aplica %]
+                        <h4>[% "Aplica a" | i18n %]:</h4>
+                          [% FOREACH aplica IN tipos_prestamo_aplica %]
+                              <span class="label label-inverse">
+                                [% TRY %]
+                                  [% aplica.ref_tipo_prestamo.getDescripcion %]
+                                [% CATCH %]
+                                [% END %]
+                              </span>&nbsp;
+                          [% END %]
+                      
+                      [% END %]
 
-            </tr>
-      </thead>  
+                      <div class="">
+                          [% PERL %]
+                                      print C4::AR::Filtros::action_button(   
+                                              button   => "btn btn-success",
+                                              action   => 'agregarSancion_show();',
+                                              title   => " Editar",
+                                              icon    => "icon-white icon-pencil",
+                                          ) ;
+                          [% END %]
+                      </div>
+
+                  </div>
+  </legend>
+
+[% IF cantidad %]
+
+    [% PERL %]
+        print C4::AR::Filtros::tableHeader(   
+                          id              => "sanciones_reglas_tabla",
+                          class           => "",
+                          selectAll_id    => "",
+                          columns         => ['[% "Orden" | i18n %]',
+                                              '[% 'D&iacute;as de demora' | i18n %]',
+                                              '[% "D&iacute;as de demora" | i18n %]','[% "Cantidad" | i18n %]',
+                                              '[% "Acciones" | i18n %]',
+                                              ],
+                                                          
+                                ) ;
+    [% END %]
+
       <tbody>
             [% FOREACH regla_tipo IN REGLAS_TIPOS_SANCIONES %]
             <tr>
@@ -34,15 +70,23 @@
         [% END %]
       </tbody>
       </table>
-      <table class="table table-striped">
-        <thead>    
-          <tr>
-              <th>[% "Orden" | i18n %]</th>
-              <th>[% "Regla" | i18n %]</th>
-              <th>[% "Cantidad" | i18n %]</th>
-              <th>[% "Agregar" | i18n %]</th>
-          </tr>
-        </thead>
+
+[% ELSE %]
+  <div class="alert alert-warning"><strong>[% 'No se han definido reglas'| i18n %].</strong></div>
+[% END %]
+      [% PERL %]
+          print C4::AR::Filtros::tableHeader(   
+                          id              => "agregar_tabla_reglas_tabla",
+                          class           => "",
+                          selectAll_id    => "",
+                          columns         => ['[% "Orden" | i18n %]','[% 'Regla' | i18n %]',
+                                              '[% 'Cantidad' | i18n %]',
+                                              '[% "Agregar" | i18n %]',
+                                              ],
+                                                          
+                                ) ;
+      [% END %]
+
         <tbody>
           <tr>
                   <td>[% ordenes %]</td>
@@ -58,13 +102,13 @@
                   </td>
                   <td>[% cantidades %]</td>
                   <td style="width: 120px;">
-	                  [% PERL %]
-	                          print C4::AR::Filtros::action_button(  
-	                                                              button   => "btn btn-primary",
-	                                                              action => "agregarReglaTipoSancion();",
-                                                                  icon  => "icon-white icon-plus",
-	                                  ) ;
-	                  [% END %]
+                    [% PERL %]
+                            print C4::AR::Filtros::action_button(  
+                                                                button   => "btn btn-primary",
+                                                                action => "agregarReglaTipoSancion();",
+                                                                icon  => "icon-white icon-plus",
+                                    ) ;
+                    [% END %]
                   </td>
           </tr>
         </tbody>
