--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
@@ -1,26 +1,25 @@
 [% IF tipo_sancion %]
-		<h4 >[% "Se aplica a" | i18n %]</h4>
-		<hr />
-		<dl style="width:60%;">
-          [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
-                <dt class="inline  rightMargin">&nbsp;&nbsp;&nbsp;[% tipo_prestamo.getDescripcion %]</dt>
-                <dd class="left">
-                 <input type="checkbox" name="chkTP" id="chkTP_[% tipo_prestamo.getId_tipo_prestamo %]" 
-                           value="[% tipo_prestamo.getId_tipo_prestamo %]" 
-                           [% IF tipo_sancion.aplicaAlTipoDePrestamo( tipo_prestamo.getId_tipo_prestamo ) %] checked="checked" [% END %] 
-                 > 
-                </dd>
-                <br />
-          [% END %]
-        </dl>
+		<div class="form-horitonzal">
+        <div class="control-group">
+           <div class="controls">
+              [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
+                       <label class="checkbox inline">
+                             <input type="checkbox" name="chkTP" id="chkTP_[% tipo_prestamo.getId_tipo_prestamo %]" 
+                                       value="[% tipo_prestamo.getId_tipo_prestamo %]" 
+                                       [% IF tipo_sancion.aplicaAlTipoDePrestamo(tipo_prestamo.getId_tipo_prestamo()) %] checked="checked" [% END %] 
+                             > 
+                             [% tipo_prestamo.getDescripcion %]
+                      </label>
+                      <br />
+               [% END %]
+          </div>
+    </div>
 [% END %]
-<div class="form-actions">
     [% PERL %]
-                        print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
-                                                            boton   => "boton_guardar",
-                                                            inline => "1",
-                                                            onClick => "guardarTiposQueAplica();",
-                                                            title   => "[% 'Guardar' | i18n %]",
+                        print C4::AR::Filtros::action_button(   
+                                                            title    => "[% 'Guardar' | i18n %]",
+                                                            button   => "btn btn-primary",
+                                                            action   => "guardarTiposQueAplica();",
+                                                            icon     => "icon-white icon-ok",
                                 ) ;
     [% END %]
-</div> 
