--- a/dev-plugins/bootstrapless/opac/DIF/meran.less
+++ b/dev-plugins/bootstrapless/opac/DIF/meran.less
@@ -66,5 +66,8 @@
 // El responsive
 @import "../../responsive.less";
 
+//El LESS general
+@import "../general.less";
+
 //El propio local
 @import "../default/propio.less";
