--- a/dev-plugins/bootstrapless/opac/default/meran.less
+++ b/dev-plugins/bootstrapless/opac/default/meran.less
@@ -66,5 +66,9 @@
 // El responsive
 @import "../../responsive.less";
 
+
+//El LESS general
+@import "../general.less";
+
 //El propio local
 @import "propio.less";
