--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -398,7 +398,7 @@
 
                                 [% FOREACH p IN portada_edicion_local %]
                                     <div class="item portadaEdicionImage" [% IF !loop.first %]style="display:none;"[% END %]>
-                                        <a class="fancylink" id="imagen_[% imagen.getImageName %]" rel="group" href="https://[% SERVER_ADDRESS %]/uploads/covers-added/[% p.getImageName %]">
+                                        <a class="fancylink" id="imagen_[% imagen.getImageName %]" rel="group_[% id2 %]" href="https://[% SERVER_ADDRESS %]/uploads/covers-added/[% p.getImageName %]">
                                             <img border="0" src="https://[% SERVER_ADDRESS %]/uploads/covers-added/[% p.getImageName %]" title="Portada" alt="[% 'Portada del ejemplar' | i18n %]" >
                                         </a>
                                     </div>
